glx/testdata/invalid/missing-required-fields/assertions/assertion-missing-subject.glx
assertions:
  assertion-missing-subject:
    property: name
    value: "John"
    citations:
      - citation-123
